@@ -10,7 +10,7 @@ import ru.worktechlab.work_task.annotations.TransactionRequired;
 import ru.worktechlab.work_task.config.params.MailParams;
 import ru.worktechlab.work_task.dto.OkResponse;
 import ru.worktechlab.work_task.dto.StringIdsDto;
-import ru.worktechlab.work_task.dto.request_dto.RegisterDTO;
+import ru.worktechlab.work_task.dto.users.RegisterDTO;
 import ru.worktechlab.work_task.dto.users.UserShortDataDto;
 import ru.worktechlab.work_task.exceptions.NotFoundException;
 import ru.worktechlab.work_task.mappers.UserMapper;
@@ -37,10 +37,9 @@ public class UserService {
     @TransactionRequired
     public void registerUser(RegisterDTO registerDto) {
         RoleModel defaultRole = roleService.getDefaultRole();
-        User user = new User(registerDto.getLastName(), registerDto.getFirstName(), registerDto.getMiddleName(),
-                registerDto.getEmail(), defaultRole, registerDto.getPhone(), registerDto.getBirthDate(),
-                Gender.valueOf(registerDto.getGender()));
-        user.setPassword(passwordEncoder.encode(registerDto.getPassword()));
+        Gender gender = Gender.valueOf(registerDto.getGender());
+        User user = new User(registerDto.getLastName(), registerDto.getFirstName(), registerDto.getMiddleName(), registerDto.getEmail(),
+                registerDto.getPhone(), defaultRole, registerDto.getBirthDate(), gender, passwordEncoder.encode(registerDto.getPassword()));
         if (mailParams.isEnable()) {
             user.setConfirmationToken(UUID.randomUUID().toString());
             userRepository.save(user);
@@ -63,18 +62,6 @@ public class UserService {
         return userRepository.findActiveUserByEmail(email)
                 .orElseThrow(() -> new UsernameNotFoundException(
                         "Пользователь с email %s не найден или не активен" + email));
-    }
-
-    @TransactionMandatory
-    public void checkHasProjectForUser(String userId,
-                                       String projectId) throws NotFoundException {
-        User user = findActiveUserById(userId);
-        boolean hasProject = user.getProjects().stream()
-                .anyMatch(pr -> Objects.equals(projectId, pr.getId()));
-        if (!hasProject)
-            throw new NotFoundException(
-                    String.format("Вам не доступен проект с ИД - %s", projectId)
-            );
     }
 
     @TransactionMandatory
@@ -116,7 +103,7 @@ public class UserService {
         return userRepository.getUsers().stream()
                 .sorted(Comparator.comparing(User::getLastName)
                         .thenComparing(User::getFirstName))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @TransactionRequired
@@ -146,12 +133,13 @@ public class UserService {
     }
 
     @TransactionRequired
-    public OkResponse activateUsers(StringIdsDto data) throws NotFoundException {
+    public OkResponse activateUsers(StringIdsDto data,
+                                    boolean activate) throws NotFoundException {
         OkResponse response = new OkResponse();
         if (data == null || CollectionUtils.isEmpty(data.getIds()))
             return response;
         List<User> users = findAndCheckUsers(data.getIds());
-        users.forEach(user -> user.setActive(true));
+        users.forEach(user -> user.setActive(activate));
         userRepository.flush();
         return response;
     }
